# wacc

./: .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  tests.yml
docs/: conf.py  index.rst  requirements-docs.txt
programs/invalid/semanticErr/IO/: readTypeErr.rlx
programs/invalid/semanticErr/array/: arrayIndexComplexNotInt.rlx  arrayMultipleIndexError.rlx
programs/invalid/semanticErr/exit/: exitNonInt.rlx  globalReturn.rlx
programs/invalid/semanticErr/function/: doubleArgDef.rlx  funcVarAccess.rlx  functionAssign.rlx  functionBadArgUse.rlx  functionBadCall.rlx  functionBadParam.rlx  functionBadReturn.rlx  functionOverArgs.rlx  functionSwapArgs.rlx  functionUnderArgs.rlx  mismatchingReturns.rlx
programs/invalid/semanticErr/multiple/: funcMess.rlx  ifAndWhileErrs.rlx
programs/invalid/semanticErr/pairs/: freeNonPair.rlx  mismatchedPair.rlx
programs/invalid/semanticErr/read/: readIntoBadFst.rlx  readIntoBadSnd.rlx  readTypeErr01.rlx
programs/invalid/semanticErr/scope/: badParentScope.rlx  badScopeRedefine.rlx
programs/invalid/semanticErr/variables/: caseMatters.rlx  undeclaredScopeVar.rlx
programs/valid/advanced/: binarySortTree.rlx  hashTable.rlx  ticTacToe.rlx
programs/valid/array/: free.rlx
programs/valid/if/: ifBasic.rlx
programs/valid/pairs/: free.rlx
programs/valid/scope/: printAllTypes.rlx  scope.rlx  scopeBasic.rlx
src/wacc/: __init__.py  console.py  lexer.py
tests/: test_console.py  test_lexer.py
(+37 files in other folders)
